tests/machine/x/ocaml/right_join.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/right_join.ml", line 51, characters 13-24:
51 |           if entry.order then (
                  ^^^^^^^^^^^
Error: This expression has type record2
       but an expression was expected of type bool
       because it is in the condition of an if-statement


Context (around line 51):
  49 |       | (entry : record3)::rest ->
  50 |         try
  51 |           if entry.order then (
  52 |             print_endline (__show ("Customer") ^ " " ^ __show (entry.customerName) ^ " " ^ __show ("has order") ^ " " ^ __show (entry.order.id) ^ " " ^ __show ("- $") ^ " " ^ __show (entry.order.total));
  53 |           ) else (
